# pixelcv_starter_local

./: .gitignore  CHANGELOG.md  CHANGELOG_FASE1.md  CLAUDE.md  COMPLETAR_FASE1.md  DOCUMENTATION.md  ESTADO_SUGERENCIAS.md  INSTALL.sh  LICENSE  OLLAMA_CONFIG.md  README.md  RESUMEN_FINAL.md  RESUMEN_OLLAMA.md  START.sh  VERIFICACION_INSTALACION.md  VERIFICACION_INSTALACION.sh  VERIFICATION.md  benchmark_results.json  commit-simple.sh  init_database.py  run.sh  test_ollama.py
.claude/: settings.json
backend/: .env.example  README.md  openapi.yaml  pyproject.toml
backend/app/: main.py
backend/app/api/: routes_auth.py  routes_cv.py  routes_cv_community.py  routes_games.py  routes_gamification.py  routes_ollama.py
backend/app/models/: database.py  db.py
backend/app/services/: auth_service.py  game_ai_service.py  game_algorithms_service.py  game_parameters_service.py  game_training_service.py  gamification_service.py  ollama_service.py  render_service.py  yaml_service.py
backend/assets/: README.md
backend/backend/app/static/artefactos/0bca9b14-4cf9-489c-bea7-6af92c467eb7/: CV.yaml
backend/tests/: test_ollama_endpoints.py
docs/: INDEX.md  INSTRUCCIONES-VPS-CORREGIDAS.md  games-ai.md  test-interactivo.html
docs/claude_code/: CLAUDE-CODE-COMPLETE-SETUP.md
docs/development/: INDEX.md  changelog_bugfixes.md  deployment.md  games-ai-api.md  games-ai-architecture.md  games-ai-training.md  phase2_plan.md  (+3 more)
frontend/: .env.local.example  README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
scripts/: commit_fase1.sh
(+50 files in other folders)
